# cloud-mesh-lab

./: .gitignore  Makefile  README.md
.github/workflows/: build-push-image.job.yml  tasks-service.job.yml  users-service.job.yml
app/: Makefile  docker-compose.all.yml  docker-compose.db.yml  docker-compose.yml
app/make/: service.mk
app/scripts/: init-db.sql
app/tasks/: .dockerignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
app/tasks/alembic/: env.py
app/tasks/alembic/versions/: 1e14b6d4ee57_initial_schema.py
app/tasks/src/: main.py
app/tasks/src/api/: health.py  tasks.py
app/tasks/src/core/: dependencies.py
app/tasks/src/db/: engine.py
app/tasks/src/db/models/: __init__.py  tasks.py
app/tasks/src/schemas/: tasks.py
app/tasks/src/services/: task_repository.py
app/users/: Dockerfile  Dockerfile.migrations  Makefile  docker-compose.yml  pyproject.toml
app/users/alembic/: env.py
app/users/alembic/versions/: 1075bacbba42_initial_schema.py  4e38cbba8ce5_initial_schema.py  61dd7106d5a0_initial_schema.py
app/users/src/: main.py
app/users/src/api/: health.py  users.py
app/users/src/core/: config.py  logging.py
app/users/src/db/: session.py
app/users/src/db/models/: __init__.py  users.py
app/users/src/helpers/: password.py
app/users/src/schemas/: users.py
app/users/src/services/: user_repository.py
infra/: cdk.context.json  package-lock.json
infra/lib/config/: naming.ts  tags.ts
lambda/db-init/: main.py  pyproject.toml  requirements.txt
scripts/: configure-aws-oidc.sh  configure-gh-secrets.sh
(+22 files in other folders)
