[project]
name = "users"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncmy>=0.2.11",
    "boto3>=1.42.40",
    "fastapi>=0.128.0",
    "rich>=14.3.2",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "alembic>=1.18.3",
    "fastapi[standard]>=0.128.0",
]
